<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chapter10</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="c10_b1">WebView</string>
    <string name="c10_b2">HttpURLConnection网络请求</string>
    <string name="c10_b3">HttpClient网络请求</string>
    <string name="c10_b4">Pull解析Xml</string>
    <string name="c10_b5">SAX解析Xml</string>
    <string name="c10_b6">JSONObject解析json</string>
    <string name="c10_b7">GSON解析json</string>
    <string name="b2_send_request">HttpURLConnection网络请求</string>

</resources>
