<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chapter10.MainActivity" >

    <Button
        android:id="@+id/c10_b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c10_b1" />

    <Button
        android:id="@+id/c10_b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c10_b2" />
    
    <Button
        android:id="@+id/c10_b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c10_b3" />
    
    <Button
        android:id="@+id/c10_b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c10_b4" />
    
    <Button
        android:id="@+id/c10_b5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c10_b5" />
    
    <Button
        android:id="@+id/c10_b6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c10_b6" />
    
    <Button
        android:id="@+id/c10_b7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c10_b7" />

</LinearLayout>